# hurl-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  publish-crates-io.yml  publish-vscode.yml  release.yml
crates/hurl-lsp/: Cargo.toml  README.md
crates/hurl-lsp/src/: backend.rs  code_lens.rs  completion.rs  definition.rs  diagnostics.rs  execution.rs  formatting.rs  hover.rs  main.rs  metadata.rs  openapi.rs  symbols.rs  syntax.rs  variables.rs  version.rs
docs/: distribution.md
editors/helix/: README.md
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/snippets/: hurl.json
editors/vscode/src/: download.ts  extension.ts  markdownExport.ts  outlineView.ts  webviewModel.ts  webviewPanel.ts
editors/vscode/syntaxes/: hurl.tmLanguage.json
editors/vscode/test/: webviewPanel.test.cjs
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs
packaging/homebrew/Formula/: hurl-lsp.rb
scripts/: update-homebrew-formula.sh
