[package]
name = "hurl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tower-lsp.workspace = true
url.workspace = true
hurl_core = "7.1.0"
hurlfmt = "7.1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
