[package]
name = "hurl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for Hurl"
readme = "README.md"
repository = "https://github.com/testmind-hq/hurl-lsp"
homepage = "https://github.com/testmind-hq/hurl-lsp"
documentation = "https://docs.rs/hurl-lsp"
keywords = ["hurl", "lsp", "language-server", "http", "testing"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tower-lsp.workspace = true
url.workspace = true
hurl_core = "7.1.0"
hurlfmt = "7.1.0"
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
